MS: commiting initial phantom site using MERN

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: hsl(184, 90%, 68%);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
