--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -2,13 +2,13 @@
   text-align: center;
 }
 
-.App-logo {
+.mask-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .mask-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
